[package]
name = "stackhammer"
version = "0.1.0"
description = "A Tauri App"
authors = []
edition = "2021"

[lib]
name = "stackhammer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-devtools = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.9"
seahash = "4.1.0"
base64 = "0.22.1"
once_cell = "1.21.3"
